# oc-softdesk-support

./: openapi.yml  pyproject.toml
accounts/: models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_contributor_project_and_more.py  0002_remove_contributor_project_project_author.py  0003_alter_contributor_user.py  0003_alter_project_author.py  0004_remove_contributor_created_time_contributor_project_and_more.py
config/: settings.py  urls.py
