[tool.poetry]
name = "oc-softdesk-support"
version = "0.1.0"
description = ""
authors = ["Christian Debray <christian.debray5@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
